<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_group_search__title"
        android:key="pref_group_search"
        >
        <CheckBoxPreference
            android:title="@string/pref_reset_transliteration_mode__title"
            android:key="auto_reset_transliteration_mode"
            android:defaultValue="true"
            android:summary="@string/pref_reset_transliteration_mode__summary"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_dictionaries__title"
        android:key="pref_group_dictionaries"
        >
        <ListPreference
            android:title="@string/pref_indices_loading_mode__title"
            android:key="indices_loading_mode"
            android:dialogTitle="@string/pref_indices_loading_mode__dialog_title"
            android:entries="@array/pref_indices_loading_mode__list"
            android:entryValues="@array/pref_indices_loading_mode__values"
            android:summary="@string/pref_indices_loading_mode__summary"
            android:defaultValue="1"
            />
        <Preference
            android:title="@string/pref_reindex_all_dictionaries__title"
            android:summary="@string/pref_reindex_all_dictionaries__summary"
            android:key="reindex_all_dictionaries"
            >
            <!--intent
                android:action="nakshatra.indexer.action.REINDEX"
                android:targetClass="IndexerActivity"
                android:targetPackage="in.bhumiputra.nakshatra"
                /-->
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_display__title"
        android:key="pref_group_display"
        >
        <CheckBoxPreference
            android:title="@string/pref_auto_hide_prev_next__title"
            android:key="auto_hide_prev_next"
            android:defaultValue="true"
            android:summary="@string/pref_auto_hide_prev_next__summary"
            />
        <ListPreference
            android:title="@string/pref_theme__title"
            android:key="theme"
            android:dialogTitle="@string/pref_theme__dialog_title"
            android:entries="@array/pref_theme__list"
            android:entryValues="@array/pref_theme__values"
            android:summary="@string/pref_theme__summary"
            android:defaultValue="classic"
            />
    </PreferenceCategory>
</PreferenceScreen>