<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fri2_layout"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fri2_text1"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/select_dictionaries_to_index"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fri2_dictionary_list"
        />
    <LinearLayout
        android:id="@+id/fri2_actions_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:id="@+id/fri2_proceed"
            android:text="@string/proceed"
            android:enabled="false"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/fri2_skip"
            android:text="@string/skip"
            />
    </LinearLayout>
</LinearLayout>