<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/actionbar_box"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/bm_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlayDark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:logo="@drawable/bookmarks"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_alignBottom="@id/bm_actionbar"
            android:background="@drawable/shadow"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bm_order_by_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/bm_order_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold|italic"
            android:padding="5dp"
            android:text="@string/order_by"
            android:layout_gravity="start"
            />

        <RadioGroup
            android:id="@+id/bm_order_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_gravity="end"
            >
            <RadioButton
                android:id="@+id/bm_order_chrono_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chronological_desc"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="5dp"
                android:textStyle="italic"
                />
            <RadioButton
                android:id="@+id/bm_order_chrono_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chronological_asc"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="5dp"
                android:textStyle="italic"
                />
            <RadioButton
                android:id="@+id/bm_order_ab_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alphabeticle_desc"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="5dp"
                android:textStyle="italic"
                />
            <RadioButton
                android:id="@+id/bm_order_ab_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alphabeticle_asc"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="5dp"
                android:textStyle="italic"
                />
        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/horizental_line"
            android:tint="?android:attr/colorForeground"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bm_bulk_remove_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorPrimary"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/bm_bulk_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold|italic"
            android:padding="5dp"
            android:text="@string/bulk_remove"
            android:layout_gravity="start"
            />
        <LinearLayout
            android:id="@+id/bm_remove_all_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="3dp"
            >
            <LinearLayout
                android:id="@+id/bm_remove_all_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/bold_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold|italic"
                    android:text="@string/remove_all"
                    />
                <TextView
                    android:id="@+id/small_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textStyle="italic"
                    android:text="@string/remove_all__note"
                    />

            </LinearLayout>

            <ImageButton
                android:id="@+id/bm_remove_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/delete_all"
                android:tint="?android:attr/colorForeground"
                android:text="@string/remove_all"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bm_remove_in_range_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            >
            <LinearLayout
                android:id="@+id/bm_remove_in_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/bm_remove_in_range_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/in_range_bold_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textStyle="bold|italic"
                        android:text="@string/remove_in_interval"
                        />
                    <TextView
                        android:id="@+id/in_range_small_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textStyle="italic"
                        android:text="@string/remove_in_interval__note"
                        />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/bm_remove_in_range_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/delete_bin"
                    android:tint="?android:attr/colorForeground"
                    android:text="@string/remove_interval"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bm_range_selection_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <LinearLayout
                    android:id="@+id/bm_range_from_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="3dp"
                    >
                    <TextView
                        android:id="@+id/range_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textStyle="italic|bold"
                        android:text="@string/from"
                        />
                    <Spinner
                        android:id="@+id/bm_range_from_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:prompt="@string/from"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bm_range_to_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/range_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textStyle="italic|bold"
                        android:text="@string/to"
                        />
                    <Spinner
                        android:id="@+id/bm_range_to_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:prompt="@string/to"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



        <!--/LinearLayout-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/horizental_line"
            android:tint="?android:attr/colorForeground"
            />

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/bm_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice"
        />

</LinearLayout>
